2003-05-21  Peter Stephenson  <pws@csr.com>

	* 18565: Src/subst.c, Test/D04parameter.ztst: when ${(u)...}
	reduced an array from more than one element to example one
	stuff happened.

2003-05-19  Peter Stephenson  <pws@csr.com>

	* 18548: Src/Zle/zle_main.c: memory leak when vared'ing arrays
	spotted by valgrind (18543).

2003-05-15  Oliver Kiddle  <opk@zsh.org>

	* 18530: Src/builtin.c, Src/options.c, Doc/Zsh/builtins.yo:
	print option states with `set -o' or `set +o' 

2003-05-15  Peter Stephenson  <pws@csr.com>

	* 18539: Src/init.c: upgrade 18536 to autoload zle on
	`set -o vi' or `set -o emacs'.

2003-05-14  Peter Stephenson  <pws@csr.com>

	* 18536: Doc/Zsh/options.yo, Src/init.c, Src/options.c,
	Src/zsh.h, Src/Zle/zle_keymap.c, Src/Zle/zle_main.c:
	Add EMACS and VI options for POSIX-style
	keymap changes; only implemented for compatibility.

	* Jonathan Paisley <jp-www@dcs.gla.ac.uk>: 18513:
	Src/Zle/complist.c: Work around a bad pointer access after
	resizing the terminal in menu selection.

2003-05-13  Oliver Kiddle  <opk@zsh.org>

	* 18525: Src/utils.c: add manual UTF-8 conversion as extra
	implementation of \u and \U so it should work on more systems

2003-05-12  Peter Stephenson  <pws@csr.com>

	* 18524: Src/utils.c: sepjoin didn't respect !heap for an empty
	array.  Showed up when vared'ing a zero-length array.

2003-05-12  Oliver Kiddle  <opk@zsh.org>

	* 18520, 13691 (Mario Lang), 13701 (Sven):
	Completion/Unix/Command/_ecasound: completion for ecasound

	* 18520, 15822/15838 (Bruno Bonfils): Completion/Unix/Command/_gpg:
	new completion for gpg

	* 18520 based on 16380, 16541 (Bruno Bonfils) and users/6013
	(GoTaR <gotar@poczta.onet.pl>): Completion/X/Command/_mplayer:
	new completion for mplayer

	* 18519: Completion/Unix/Command/_init_d: was broken due to
	changes in option parsing for the read builtin

2003-05-08  Peter Stephenson  <pws@csr.com>

	* 18512: README, Completion/Unix/Command/_cvs,