@@ -1,3 +1,12 @@
+2003-05-22  Peter Stephenson  <pws@csr.com>
+
+	* 18559, 18562: README, Doc/Zsh/mod_socket.yo, Doc/Zsh/mod_tcp.yo,
+	Doc/Zsh/zle.yo, Src/zsh.h, Src/Modules/files.c,
+	Src/Modules/socket.c, Src/Modules/tcp.c Src/Zle/zle_keymap.c
+	Src/Zle/zle_main.c: zsocket -d, ztcp -d, bindkey -M and
+	mkdir -m now take arguments of their own instead of swallowing the
+	first normal argument.  Also updgrade comment in README for 18512.
+
 2003-05-21  Peter Stephenson  <pws@csr.com>
 
 	* 18565: Src/subst.c, Test/D04parameter.ztst: when ${(u)...}
